.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/Ahpra_Candidate_Check__c.object-meta.xml
<CustomObject>
    <description>Used to store records retrieved from AHPRA</description>
    <label>AHPRA Candidate Check</label>
    <nameField>
        <displayFormat>AHPRA-{00000}</displayFormat>
        <label>AHPRA Candidate Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AHPRA Candidate Check</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>