.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Ahpra_Candidate_Link__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Candidate_Link__c</fullName>
    <label>AHPRA Candidate Link</label>
    <type>Url</type>
</CustomField>