.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/AHPRA_Candidate_Number__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Candidate_Number__c</fullName>
    <label>AHPRA Candidate Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>