.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/AHPRA_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Last_Name__c</fullName>
    <label>AHPRA Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>