.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Ahpra_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AHPRA Review Required</label>
    <type>Checkbox</type>
</CustomField>