.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Ahpra_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AHPRA Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ahpra_Candidate_Check</relationshipName>
    <type>Lookup</type>
</CustomField>