.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Ahpra_Candidate_Check</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>