.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Number_of_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Endorsements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Endorsements</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>