.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Profession_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Profession_Start_Date__c</fullName>
    <label>Profession Start Date</label>
    <type>Date</type>
</CustomField>