.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Registration_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_To_Date__c</fullName>
    <label>Registration To Date</label>
    <type>Date</type>
</CustomField>