.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <label>Reviewer Comments</label>
    <type>TextArea</type>
</CustomField>