.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Candidate_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AHPRA_Candidate_Number__c</columns>
    <columns>Ahpra_Review_Required__c</columns>
    <columns>Candidate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reviewer_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>